name:                echoserver
version:             0.1.0.0
synopsis:            Concurrent echo server in Haskell
description:         Please see README.md
homepage:            https://github.com/andreweduffy/echoserver#readme
license:             BSD3
license-file:        LICENSE
author:              Andrew Duffy
maintainer:          root@aduffy.io
copyright:           2017 Andrew Duffy
category:            Web
build-type:          Simple
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Lib
  build-depends: base >= 4.7 && < 5
               , network >= 2.4
               , bytestring >= 0.10.8.1
  default-language:    Haskell2010

executable echoserver
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , echoserver
  default-language:    Haskell2010

test-suite webhs-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  build-depends:       base
                     , echoserver
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/andreweduffy/echoserver
